# SLM-MUX-ICLR

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: default.yaml  together.yaml  vllm_local.yaml
src/slm_mux/: __init__.py
src/slm_mux/benchmarks/: __init__.py  base.py  gpqa.py  gsm8k.py  humaneval.py  ifeval.py  math500.py
src/slm_mux/cli/: __init__.py  collect.py  main.py  offline.py  run.py  search.py
src/slm_mux/confidence/: __init__.py  base.py  consistency.py  embedding.py  hidden_state.py  learned_router.py  logprob.py  reward_model.py  verbalized.py
src/slm_mux/config/: __init__.py  loader.py  schema.py
src/slm_mux/engine/: __init__.py  mux.py  offline.py  selector.py  tie_breaker.py
src/slm_mux/evaluation/: __init__.py  judge.py  metrics.py
src/slm_mux/extractors/: __init__.py  base.py  code.py  gsm.py  math.py  mcqa.py
src/slm_mux/providers/: __init__.py  _secrets.py  base.py  gemini.py  hf_endpoint.py  lmdeploy.py  openai_provider.py  rate_limiter.py  registry.py  retry.py  sglang.py  together.py  vllm.py
